# segagenesisrecomp

./: .gitignore  .gitmodules  COVERAGE.md  LICENSE.md  README.md
clownmdemu-core/: CMakeLists.txt  unity.c
clownmdemu-core/libraries/clown68000/source/interpreter/: clown68000.c
clownmdemu-core/source/: bus-common.c  bus-common.h  bus-main-m68k.c  bus-main-m68k.h  bus-sub-m68k.c  bus-sub-m68k.h  bus-z80.c  clownmdemu.c  clownmdemu.h  fm-channel.c  fm.c  vdp.c  vdp.h
genesisrecomp/: .gitignore  LICENSE  README.md
genesisrecomp/recompiler/: CMakeLists.txt
genesisrecomp/recompiler/src/: annotations.c  main_genesis.c  rom_parser.c  rom_parser.h
genesisrecomp/runner/include/: crc32.h  framedump.h  game_extras.h  savestate.h  ym2612.h
genesisrecomp/runner/src/: launcher.c  z80.c
recompiler/: CMakeLists.txt  _build_recomp.bat
recompiler/src/: annotations.h  code_generator.c  code_generator.h  codegen_diag.c  codegen_diag.h  cycle_probe.c  cycle_probe.h  function_finder.c  function_finder.h  game_config.c  game_config.h  m68k_decoder.c  m68k_decoder.h  m68k_validator.c  m68k_validator.h  main_genesis.c
runner/: clown68000_patch.patch  clownmdemu_patch.patch  clownmdemu_patches.cmake  runner.cmake
runner/include/: genesis_runtime.h  input_script.h  launcher.h  logger.h  psg.h  vdp.h  z80.h
runner/src/: crc32.c  framedump.c  input_script.c  logger.c  main_runner.c  psg.c  runtime.c  savestate.c  vdp.c  ym2612.c
sonic3k/: game.toml
sonicthehedgehog/: README.md  annotations_from_disasm.csv  blacklist.txt  extras.c  extras.h  game.cfg  game.cfg.bak  game.toml  sonic1.disasm_jumptables.toml  sonic1.disasm_jumptables.txt  sonic1.disasm_seeds.toml  sonic1.disasm_seeds.txt  sonic1.disasm_subs.toml  sonic1.disasm_subs.txt  sonic1.syms.toml
sonicthehedgehog2/: annotations_from_disasm.csv  game.cfg  game.toml  sonic2.disasm_jumptables.toml  sonic2.disasm_jumptables.txt  sonic2.disasm_labels.toml  sonic2.disasm_seeds.txt  sonic2.disasm_subs.txt  sonic2_spec.c
tests/: CMakeLists.txt
tests/fixtures/sonic1/l1/: code_addresses.txt  instructions.txt
tests/fixtures/sonic1/l3/: manifest.txt
tests/fixtures/sonic2/l1/: code_addresses.txt  instructions.txt
tests/harness/: codegen_diag_test.c  l1_decoder_test.c  l3_oracle_test.c  m68k_decoder_synth_test.c  m68k_validator_test.c
tests/tools/: _audit_cfg_redundancy.py  _check_toml.py  _prune_cfg.py  gen_annotations_csv.py  gen_disasm_jumptables.py  gen_disasm_labels.py  gen_disasm_seeds.py  gen_disasm_subs.py  gen_l1_fixtures.py  gen_l3_manifest.py
